--- a/Nino3.4.ipynb
+++ b/Nino3.4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "de3cb2a2",
    "metadata": {},
    "outputs": [],
@@ -96,26 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "09628c85",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "2471c541",
    "metadata": {},
    "outputs": [],
    "source": [
     "path = \"/home/esp-shared-a/Distribution/Workshops/cli_dy_summer_school_2023/observations/surface/era5/era5_sst_1940_2022_1deg.nc\"\n",
+    "output_path = \"/scratch/gcerato/\"\n",
+    "dataset_name = \"ERA5_1x1\"\n",
     "sst = xr.open_dataarray(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "5e1f70f2",
    "metadata": {},
    "outputs": [
@@ -136,11 +130,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "11fc4aeb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Save the outputs\n",
+    "nino34.to_netcdf(output_path + \"nino34_\" + dataset_name + \".nc\") #netCDF format\n",
+    "\n",
+    "with open(output_path + \"nino_date_\" + dataset_name, \"wb\") as fp1:   #List\n",
+    "    pickle.dump(nino_date, fp1)\n",
+    "with open(output_path + \"nina_date_\" + dataset_name, \"wb\") as fp2:   #List\n",
+    "    pickle.dump(nina_date, fp2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "776067a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nwith open(output_path + \\'nina_date\\', \\'rb\\') as f:\\n    nina_date = pickle.load(f)\\n    \\nwith open(output_path + \\'nino_date\\', \\'rb\\') as f:\\n    nino_date = pickle.load(f)\\n    \\nnino34 = xr.open_dataarray(output_path + \"nino34.nc\")\\n\\n'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Uncomment to open files\n",
+    "'''\n",
+    "\n",
+    "with open(output_path + 'nina_date', 'rb') as f:\n",
+    "    nina_date = pickle.load(f)\n",
+    "    \n",
+    "with open(output_path + 'nino_date', 'rb') as f:\n",
+    "    nino_date = pickle.load(f)\n",
+    "    \n",
+    "nino34 = xr.open_dataarray(output_path + \"nino34.nc\")\n",
+    "\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
